--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@
 # And create s3_sandbox directory (or remove volume creation)
 shrinkmeister:
   build: .
-  command: bash -c "cd /root/src/ && python manage.py runserver 0.0.0.0:80"
+  #command: bash -c "cd /root/src/ && python manage.py runserver 0.0.0.0:80"
+  command: bash -c "cd /root/src/ && python manage.py test shrinkmeister"
   environment:
     - AWS_ACCESS_KEY_ID
     - AWS_SECRET_ACCESS_KEY
@@ -14,12 +15,14 @@ shrinkmeister:
     - THUMBNAIL_SERVER_URL=localhost
     - CACHE_LOCATION=mc
     - DEBUG=True
-    - S3_ENDPOINT=http://fake-s3:4569
+    - AWS_S3_HOST=http://fake-s3:4569
   links:
     - mc
     - fake-s3
   volumes:
     - "../shrinkmeister:/root/src" # Shrinkmeister local codebase
+  ports:
+    - "8000:80"
 mc:
   image: sylvainlasnier/memcached
 fake-s3:
