--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ version: '2.1'
 services:
   redis:
     image: redis
+    ports:
+      - "6379:6379"
   fake-s3:
     image: lphoward/fake-s3
     volumes:
