--- a/docker-test.yml
+++ b/docker-test.yml
@@ -1,35 +1,16 @@
 version: '2.1'
 services:
-  shrinkmeister:
+  test:
     build: .
-    command: bash -c "ls -l ~/.aws && cd /root/src/ && /var/venv/bin/python manage.py test shrinkmeister"
+    command: bash -c "ls -l ~/.aws && cd /root/src/ && /var/venv/bin/python runtests.sh"
     environment:
       - DEBUG=True
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - THUMBNAIL_SECRET_KEY=DEBUG
-      - THUMBNAIL_SERVER_URL=http://localhost/
-      - THUMBNAIL_BUCKET=DEBUG
-      - THUMBNAIL_CACHE_LOCATION=redis://redis
-      - THUMBNAIL_CACHE_BACKEND=django_redis.cache.RedisCache
-      - AWS_S3_HOST=http://fake-s3:4569
+      - THUMBNAIL_SERVER_URL=http://localhost:8001/
     volumes:
       - ".:/root/src" # Shrinkmeister local codebase
       - ".aws:/root/.aws"
     ports:
       - "8000:80"
-  # mc:
-  #   image: sylvainlasnier/memcached
-  #   #networks:
-  #   #   - base
-  # fake-s3:
-  #   image: lphoward/fake-s3
-  #   volumes:
-  #     - "./s3_sandbox:/fakes3_root"
-  #   ports:
-  #     - "4569:4569"
-  #   hostname: fake-s3
-  #   # networks:
-    #   - base
-#     networks:
-#       - base
