--- a/docker-test-server-cov.yml
+++ b/docker-test-server-cov.yml
@@ -2,14 +2,17 @@ version: '2.1'
 services:
   test:
     build: .
-    command: bash -c "ls -l ~/.aws && cd /root/src/ && /var/venv/bin/python manage_test.py test tests"
+    command: bash -c "ls -l ~/.aws && cd /root/src/ && /var/venv/bin/python manage.py test shrinkmeister"
     environment:
       - DEBUG=True
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - THUMBNAIL_SECRET_KEY=DEBUG
-      - THUMBNAIL_SERVER_URL=http://shrinkmeister:8000/
+      - THUMBNAIL_SERVER_URL=http://localhost:8001/
+      - THUMBNAIL_BUCKET=DEBUG
       - THUMBNAIL_CACHE_LOCATION=redis://redis
+      - THUMBNAIL_CACHE_BACKEND=django_redis.cache.RedisCache
+      - ALLOWED_HOST=shrinkmeister
     volumes:
       - ".:/root/src" # Shrinkmeister local codebase
       - ".aws:/root/.aws"
